--- a/service-front/app/languages/messages.pot
+++ b/service-front/app/languages/messages.pot
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Language: en_GB\n"
-"POT-Creation-Date: 2023-06-29T11:23:32+00:00\n"
+"POT-Creation-Date: 2023-07-03T14:35:42+00:00\n"
 "X-Domain: messages\n"
 
 #: src/Actor/templates/actor/activation-key-request-received.html.twig:16
@@ -118,7 +118,7 @@ msgstr ""
 #: src/Actor/templates/actor/check-lpa.html.twig:70
 #: src/Actor/templates/actor/check-your-answers.html.twig:92
 #: src/Actor/templates/actor/lpa-create-viewercode.html.twig:66
-#: src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig:82
+#: src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig:215
 #: src/Viewer/templates/viewer/check-code-found.html.twig:39
 #: src/Viewer/templates/viewer/viewer-terms-of-use.html.twig:44
 msgid "Warning"
@@ -2357,7 +2357,7 @@ msgstr ""
 
 #: src/Actor/templates/actor/request-activation-key/postcode.html.twig:38
 #: src/Common/templates/common/cookies.html.twig:137
-#: src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig:131
+#: src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig:182
 msgid "No"
 msgstr ""
 
@@ -3912,7 +3912,7 @@ msgid ""
 "                <br>To view these, ask to see the paper LPA"
 msgstr ""
 
-#: src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig:92
+#: src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig:108
 msgid "Preferences"
 msgstr ""
 
@@ -3922,7 +3922,7 @@ msgid ""
 "                    <br>To view these, ask to see the paper LPA"
 msgstr ""
 
-#: src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig:121
+#: src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig:172
 msgid "Instructions"
 msgstr ""
 
@@ -4683,19 +4683,19 @@ msgid ""
 "                    title=\"lasting power of attorney\">LPA</abbr> reference number"
 msgstr ""
 
-#: src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig:98
+#: src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig:114
 msgid "Yes, the donor made preferences on their LPA."
 msgstr ""
 
-#: src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig:140
+#: src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig:228
 msgid "A scanned copy of the donor’s preferences and/or instructions - the text cannot be digitised at present"
 msgstr ""
 
-#: src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig:127
+#: src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig:178
 msgid "Yes, the donor set instructions on their LPA."
 msgstr ""
 
-#: src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig:128
+#: src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig:179
 msgid "To view these, ask to see the paper LPA."
 msgstr ""
 
@@ -4708,4 +4708,98 @@ msgid ""
 "Some words in these instructions or preferences may have been removed by the Court of\n"
 "                        Protection. If you need to check this, please see the paper\n"
 "                        <abbr title=\"lasting power of attorney\">LPA</abbr>."
+msgstr ""
+
+#: src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig:4
+msgid ""
+"When can the <abbr\n"
+"                        title=\"lasting power of attorney\">LPA</abbr> be used?"
+msgstr ""
+
+#: src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig:9
+msgid ""
+"You have said that this <abbr\n"
+"                                title=\"lasting power of attorney\">LPA</abbr> can be used now. While you have mental capacity, your attorneys can only use the\n"
+"                            <abbr title=\"lasting power of attorney\">LPA</abbr> if you allow them to."
+msgstr ""
+
+#: src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig:13
+msgid ""
+"The donor has said that this <abbr\n"
+"                                title=\"lasting power of attorney\">LPA</abbr> can be used now. While the donor has mental capacity, you can only use the\n"
+"                            <abbr title=\"lasting power of attorney\">LPA</abbr> if the donor allows you to."
+msgstr ""
+
+#: src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig:18
+msgid ""
+"This <abbr\n"
+"                            title=\"lasting power of attorney\">LPA</abbr> can only be used when the donor has lost capacity"
+msgstr ""
+
+#: src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig:21
+msgid ""
+"This <abbr\n"
+"                            title=\"lasting power of attorney\">LPA</abbr> can be used as soon as it's registered unless instructions say otherwise."
+msgstr ""
+
+#: src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig:28
+msgid ""
+"Life-sustaining\n"
+"                    <br>treatment"
+msgstr ""
+
+#: src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig:36
+msgid ""
+"To view this, ask to see the paper <abbr\n"
+"                            title=\"lasting power of attorney\">LPA</abbr>"
+msgstr ""
+
+#: src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig:83
+msgid ""
+"Some words in these instructions or preferences have been removed by the court of\n"
+"                            protection. To check which words have been removed, please ask to see the paper\n"
+"                            <abbr title=\"lasting power of attorney\">LPA</abbr> or the court order."
+msgstr ""
+
+#: src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig:96
+msgid ""
+"Some words in these instructions or preferences may have been removed by the Court of\n"
+"                            Protection. If you need to check this, please see the paper\n"
+"                            <abbr title=\"lasting power of attorney\">LPA</abbr>."
+msgstr ""
+
+#: src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig:131
+msgid ""
+"We cannot show the preferences for this <abbr title=\"lasting power of attorney\">LPA</abbr>.\n"
+"                                    Until we can fix this problem, you’ll need to show the paper\n"
+"                                    <abbr title=\"lasting power of attorney\">LPA</abbr> to anyone who needs to see them."
+msgstr ""
+
+#: src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig:137
+msgid ""
+"We cannot show the preferences for this <abbr title=\"lasting power of attorney\">LPA</abbr>.\n"
+"                                    Until we can fix this problem, if you need to see these you’ll need to ask the person who\n"
+"                                    gave you the access code to show you the paper <abbr title=\"lasting power of attorney\">LPA</abbr>."
+msgstr ""
+
+#: src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig:152
+msgid "A scanned image of the donor’s preferences will appear here soon. The first time may take up to 10 minutes. Please refresh this page."
+msgstr ""
+
+#: src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig:195
+msgid ""
+"We cannot show the instructions for this <abbr title=\"lasting power of attorney\">LPA</abbr>.\n"
+"                                Until we can fix this problem, you’ll need to show the paper\n"
+"                                <abbr title=\"lasting power of attorney\">LPA</abbr> to anyone who needs to see them."
+msgstr ""
+
+#: src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig:201
+msgid ""
+"We cannot show the instructions for this <abbr title=\"lasting power of attorney\">LPA</abbr>.\n"
+"                                Until we can fix this problem, if you need to see these you’ll need to ask the person who\n"
+"                                gave you the access code to show you the paper <abbr title=\"lasting power of attorney\">LPA</abbr>."
+msgstr ""
+
+#: src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig:216
+msgid "A scanned image of the donor’s instructions will appear here soon. The first time may take up to 10 minutes. Please refresh this page."
 msgstr ""
