Added welsh for loading warnings.

--- a/service-front/app/languages/cy/LC_MESSAGES/messages.po
+++ b/service-front/app/languages/cy/LC_MESSAGES/messages.po
@@ -6759,6 +6759,10 @@ msgid ""
 "                                    <abbr title=\"lasting power of "
 "attorney\">LPA</abbr> to anyone who needs to see them."
 msgstr ""
+"Ni allwn ddangos y dymuniadau ar gyfer y <abbr title=\"atwrneiaeth "
+"arhosol\">LPA</abbr> hon. Hyd nes y gallwn ddatrys y broblem hon, bydd rhaid "
+"ichi ddangos y <abbr title=\"atwrneiaeth arhosol\">LPA</abbr> bapur i unrhyw "
+"un sydd angen ei gweld.  "
 
 #: src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig:137
 msgid ""
@@ -6769,12 +6773,19 @@ msgid ""
 "                                    gave you the access code to show you the "
 "paper <abbr title=\"lasting power of attorney\">LPA</abbr>."
 msgstr ""
+"Ni allwn ddangos y dymuniadau ar gyfer y <abbr title=\"atwrneiaeth "
+"arhosol\">LPA</abbr> hon. Hyd nes y gallwn ddatrys y broblem hon, os byddwch "
+"angen gweld y rhain, bydd rhaid i chi ofyn i’r person a roddodd y cod mynediad "
+"i chi i ddangos y <abbr title=\"atwrneiaeth arhosol\">LPA</abbr> bapur i chi"
 
 #: src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig:152
 msgid ""
 "A scanned image of the donor’s preferences will appear here soon. The first "
 "time may take up to 10 minutes. Please refresh this page."
 msgstr ""
+"Bydd delwedd wedi ei sganio o ddewisiadau’r rhoddwr yn ymddangos yma’n fuan. "
+"Efallai y bydd yn cymryd hyd at 10 munud y tro cyntaf. Adnewyddwch y dudalen "
+"hon os gwelwch yn dda."
 
 #: src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig:195
 msgid ""
@@ -6785,6 +6796,10 @@ msgid ""
 "                                <abbr title=\"lasting power of attorney\">LPA</"
 "abbr> to anyone who needs to see them."
 msgstr ""
+"Ni allwn ddangos y cyfarwyddiadau ar gyfer y <abbr title=\"atwrneiaeth "
+"arhosol\">LPA</abbr> hon. Hyd nes y gallwn ddatrys y broblem hon, bydd rhaid "
+"ichi ddangos y <abbr title=\"atwrneiaeth arhosol\">LPA</abbr> bapur i unrhyw "
+"un sydd angen ei gweld."
 
 #: src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig:201
 msgid ""
@@ -6795,9 +6810,16 @@ msgid ""
 "                                gave you the access code to show you the paper "
 "<abbr title=\"lasting power of attorney\">LPA</abbr>."
 msgstr ""
+"Ni allwn ddangos y cyfarwyddiadau ar gyfer y <abbr title=\"atwrneiaeth "
+"arhosol\">LPA</abbr> hon. Hyd nes y gallwn ddatrys y broblem hon, os byddwch "
+"angen gweld y rhain, bydd rhaid i chi ofyn i’r person a roddodd y cod mynediad "
+"i chi i ddangos y <abbr title=\"atwrneiaeth arhosol\">LPA</abbr> bapur i chi."
 
 #: src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig:216
 msgid ""
 "A scanned image of the donor’s instructions will appear here soon. The first "
 "time may take up to 10 minutes. Please refresh this page."
 msgstr ""
+"Bydd delwedd wedi ei sganio o gyfarwyddiadau’r rhoddwr yn ymddangos yma’n "
+"fuan. Efallai y bydd yn cymryd hyd at 10 munud y tro cyntaf. Adnewyddwch y "
+"dudalen hon os gwelwch yn dda."
