--- a/service-front/app/languages/cy/LC_MESSAGES/messages.po
+++ b/service-front/app/languages/cy/LC_MESSAGES/messages.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2023-07-24T10:00:41+00:00\n"
+"POT-Creation-Date: 2023-07-24T16:32:09+00:00\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -6473,8 +6473,7 @@ msgstr ""
 "Dangosir hefyd y ddelwedd hon sydd wedi ei sganio i unrhyw un y rhoddwch gôd "
 "mynediad iddo. Gwiriwch fod modd darllen y ddelwedd sydd wedi ei sganio cyn "
 "rhoi côd mynediad i sefydliadau. Bydd hwn yn gweithio ar gyfer pob cod "
-"mynediad a grëwyd ar ôl 4 Gorffennaf 2023. Bydd hwn yn gweithio ar gyfer pob "
-"cod mynediad a grëwyd ar ôl 4 Gorffennaf 2023."
+"mynediad a grëwyd ar ôl 4 Gorffennaf 2023."
 
 #: src/Actor/templates/actor/instructions-preferences.html.twig:60
 msgid ""
@@ -6494,25 +6493,6 @@ msgstr ""
 "Gellir defnyddio’r <abbr title=\"atwrneiaeth arhosol\">LPA</abbr> hon cyn "
 "gynted ag y bydd wedi’i chofrestru heblaw bod y cyfarwyddiadau yn dweud fel "
 "arall"
-
-#: src/Actor/templates/actor/instructions-preferences.html.twig:31
-#, fuzzy
-#| msgid ""
-#| "This scanned image is also shown to anyone you give an access code to. "
-#| "Please check that the scanned image is readable before giving an access "
-#| "code to organisations. This will work for all access codes made after 4 "
-#| "July 2023."
-msgid ""
-"This scanned image is also shown to anyone you give an access code to. Please "
-"check that the scanned image is readable before giving an access code to "
-"organisations. This will work for all access codes made after 4 July 2023. "
-"This will work for all access codes made after 4 July 2023."
-msgstr ""
-"Dangosir hefyd y ddelwedd hon sydd wedi ei sganio i unrhyw un y rhoddwch gôd "
-"mynediad iddo. Gwiriwch fod modd darllen y ddelwedd sydd wedi ei sganio cyn "
-"rhoi côd mynediad i sefydliadau. Bydd hwn yn gweithio ar gyfer pob cod "
-"mynediad a grëwyd ar ôl 4 Gorffennaf 2023. Bydd hwn yn gweithio ar gyfer pob "
-"cod mynediad a grëwyd ar ôl 4 Gorffennaf 2023."
 
 #~ msgid ""
 #~ "Some semantic elements were implemented in a way that did not convey the "
