--- a/service-front/app/languages/cy/LC_MESSAGES/messages.po
+++ b/service-front/app/languages/cy/LC_MESSAGES/messages.po
@@ -11,7 +11,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=6; plural=(n==0 ? 0 : n==1 ? 1 : n==2 ? 2 : n==3 ? 3 : "
 "n==6 ? 4 : 5);\n"
-"X-Generator: Poedit 3.3.1\n"
+"X-Generator: Poedit 3.3.2\n"
 
 #: src/Actor/templates/actor/activation-key-request-received.html.twig:16
 msgid "We've got your activation key request"
@@ -119,7 +119,7 @@ msgstr "Iechyd a lles"
 
 #: src/Actor/templates/actor/lpa-show-viewercode.html.twig:21
 msgid "Your access code"
-msgstr ""
+msgstr "Eich cod mynediad"
 
 #: src/Actor/templates/actor/lpa-show-viewercode.html.twig:38
 msgid "Copy code"
@@ -1279,6 +1279,8 @@ msgid ""
 "This <abbr title=\"lasting power of attorney\">LPA</abbr> can only be used "
 "when the donor has lost capacity."
 msgstr ""
+"Dim ond pan fydd y rhoddwr wedi colli gallu y gellir defnyddio’r <abbr "
+"title=“lasting power of attorney”>LPA</abbr> hon."
 
 #: src/Actor/templates/actor/view-lpa-summary.html.twig:67
 #: src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig:21
@@ -2015,6 +2017,8 @@ msgid ""
 "In some older LPAs, instructions and preferences are called 'restrictions and "
 "conditions'."
 msgstr ""
+"Mewn rhai LPAs hŷn, gelwir cyfarwyddiadau a dewisiadau yn ‘gyfyngiadau ac "
+"amodau’."
 
 #: src/Actor/templates/actor/instructions-preferences.html.twig:75
 msgid "I do not have the paper LPA"
@@ -2030,6 +2034,8 @@ msgid ""
 "the donor (the person the <abbr title=\"lasting power of attorney\">LPA</abbr> "
 "is for)"
 msgstr ""
+"y rhoddwr (y sawl y mae’r <abbr title=“lasting power of attorney”>LPA</abbr> "
+"ar ei gyfer)"
 
 #: src/Actor/templates/actor/instructions-preferences.html.twig:87
 msgid "one of the attorneys"
@@ -3211,7 +3217,7 @@ msgstr "Cyfeiriad"
 
 #: src/Actor/templates/actor/request-activation-key/actor-address.html.twig:32
 msgid "You've already given your postcode as %postcode%"
-msgstr ""
+msgstr "Rydych chi eisoes wedi rhoi eich cod post fel %postcode%"
 
 #: src/Actor/templates/actor/request-activation-key/actor-address.html.twig:33
 msgid "Your activation key will be posted to this address."
@@ -3219,11 +3225,11 @@ msgstr "Bydd eich allwedd cadarnhau cyfrif yn cael ei bostio i’r cyfeiriad hwn
 
 #: src/Actor/templates/actor/request-activation-key/actor-address.html.twig:35
 msgid "Address line 1"
-msgstr ""
+msgstr "Llinell 1 y cyfeiriad"
 
 #: src/Actor/templates/actor/request-activation-key/actor-address.html.twig:40
 msgid "Address line 2 (optional)"
-msgstr ""
+msgstr "Llinell 2 y cyfeiriad (dewisol)"
 
 #: src/Actor/templates/actor/request-activation-key/actor-address.html.twig:45
 msgid "Town or city"
@@ -3804,9 +3810,9 @@ msgid ""
 "has expired, you can <a href=\"%link%\" class=\"govuk-link\">ask for a new "
 "activation key</a>."
 msgstr ""
-"Bydd eich allwedd cadarnhau cyfrif yn dod i ben flwyddyn ar ôl y dyddiad ar y "
-"llythyr.Os yw eich allwedd wedi dod i ben, gallwch ofyn am allwedd ysgogi "
-"newydd."
+"Mae eich allwedd yn dod i ben flwyddyn ar ôl y dyddiad ar y llythyr. Os yw "
+"eich allwedd wedi dod i ben, gallwch <a href=“%link%” class=“govuk-link”>ofyn "
+"am allwedd newydd</a>."
 
 #: src/Actor/templates/actor/lpa-not-found.html.twig:24
 msgid "Date of birth:"
@@ -5455,7 +5461,7 @@ msgstr ""
 
 #: src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig:229
 msgid "Additional Information"
-msgstr ""
+msgstr "Gwybodaeth ychwanegol"
 
 #: src/Common/templates/partials/lpa-summary-details/lpa-attorney-details.html.twig:1
 msgid "The attorneys"
