--- a/service-front/app/languages/cy/LC_MESSAGES/messages.po
+++ b/service-front/app/languages/cy/LC_MESSAGES/messages.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2023-08-02T14:08:52+00:00\n"
+"POT-Creation-Date: \n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -119,7 +119,7 @@ msgstr "Iechyd a lles"
 
 #: src/Actor/templates/actor/lpa-show-viewercode.html.twig:21
 msgid "Your access code"
-msgstr ""
+msgstr "Eich cod mynediad"
 
 #: src/Actor/templates/actor/lpa-show-viewercode.html.twig:38
 msgid "Copy code"
@@ -144,6 +144,7 @@ msgstr "Daw’r cod hwn i ben ymhen 30 diwrnod, ar yr %date%."
 #: src/Actor/templates/actor/view-lpa-summary.html.twig:155
 #: src/Actor/templates/actor/request-activation-key/check-details-and-consent.html.twig:157
 #: src/Actor/templates/actor/check-lpa.html.twig:71
+#: src/Actor/templates/actor/lpa-create-viewercode.html.twig:65
 #: src/Actor/templates/actor/lpa-create-viewercode.html.twig:66
 #: src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig:203
 #: src/Viewer/templates/viewer/check-code-found.html.twig:39
@@ -382,7 +383,7 @@ msgstr "Math o LPA"
 #: src/Actor/templates/actor/check-lpa.html.twig:97
 #: src/Actor/templates/actor/check-your-answers.html.twig:93
 #: src/Actor/templates/actor/home-page.html.twig:52
-#: src/Actor/templates/actor/lpa-create-viewercode.html.twig:75
+#: src/Actor/templates/actor/lpa-create-viewercode.html.twig:74
 #: src/Viewer/templates/viewer/enter-code.html.twig:64
 msgid "Continue"
 msgstr "Parhau"
@@ -1278,6 +1279,8 @@ msgid ""
 "This <abbr title=\"lasting power of attorney\">LPA</abbr> can only be used "
 "when the donor has lost capacity."
 msgstr ""
+"Dim ond pan fydd y rhoddwr wedi colli gallu y gellir defnyddio’r <abbr "
+"title=“lasting power of attorney”>LPA</abbr> hon."
 
 #: src/Actor/templates/actor/view-lpa-summary.html.twig:67
 #: src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig:21
@@ -2014,6 +2017,8 @@ msgid ""
 "In some older LPAs, instructions and preferences are called 'restrictions and "
 "conditions'."
 msgstr ""
+"Mewn rhai LPAs hŷn, gelwir cyfarwyddiadau a dewisiadau yn ‘gyfyngiadau ac "
+"amodau’."
 
 #: src/Actor/templates/actor/instructions-preferences.html.twig:73
 msgid "I do not have the paper LPA"
@@ -2029,6 +2034,8 @@ msgid ""
 "the donor (the person the <abbr title=\"lasting power of attorney\">LPA</abbr> "
 "is for)"
 msgstr ""
+"y rhoddwr (y sawl y mae’r <abbr title=“lasting power of attorney”>LPA</abbr> "
+"ar ei gyfer)"
 
 #: src/Actor/templates/actor/instructions-preferences.html.twig:85
 msgid "one of the attorneys"
@@ -3210,7 +3217,7 @@ msgstr "Cyfeiriad"
 
 #: src/Actor/templates/actor/request-activation-key/actor-address.html.twig:32
 msgid "You've already given your postcode as %postcode%"
-msgstr ""
+msgstr "Rydych chi eisoes wedi rhoi eich cod post fel %postcode%"
 
 #: src/Actor/templates/actor/request-activation-key/actor-address.html.twig:33
 msgid "Your activation key will be posted to this address."
@@ -3218,11 +3225,11 @@ msgstr "Bydd eich allwedd cadarnhau cyfrif yn cael ei bostio i’r cyfeiriad hwn
 
 #: src/Actor/templates/actor/request-activation-key/actor-address.html.twig:35
 msgid "Address line 1"
-msgstr ""
+msgstr "Llinell 1 y cyfeiriad"
 
 #: src/Actor/templates/actor/request-activation-key/actor-address.html.twig:40
 msgid "Address line 2 (optional)"
-msgstr ""
+msgstr "Llinell 2 y cyfeiriad (dewisol)"
 
 #: src/Actor/templates/actor/request-activation-key/actor-address.html.twig:45
 msgid "Town or city"
@@ -3552,13 +3559,12 @@ msgstr ""
 "title=\"atwrneiaeth arhosol\">LPA</abbr>"
 
 #: src/Actor/templates/actor/lpa-dashboard.html.twig:40
-#, fuzzy
 msgid ""
 "view an <abbr title=\"lasting power of attorney\">LPA</abbr> summary, "
 "including a scanned image of the instructions and preferences if there are any"
 msgstr ""
-"view an <abbr title=\"atwrneiaeth arhosol\">LPA</abbr> summary, gan gynnwys "
-"delwedd wedi’i sganio o’r cyfarwyddiadau a’r dewisiadau, os oes rhai"
+"gweld crynodeb o <abbr title=“lasting power of attorney”>LPA</abbr>, gan "
+"gynnwys delwedd wedi’i sganio o’r cyfarwyddiadau a’r dewisiadau os oes rhai"
 
 #: src/Actor/templates/actor/lpa-dashboard.html.twig:41
 #: src/Actor/templates/actor/lpa-blank-dashboard.html.twig:41
@@ -3803,9 +3809,9 @@ msgid ""
 "has expired, you can <a href=\"%link%\" class=\"govuk-link\">ask for a new "
 "activation key</a>."
 msgstr ""
-"Bydd eich allwedd cadarnhau cyfrif yn dod i ben flwyddyn ar ôl y dyddiad ar y "
-"llythyr.Os yw eich allwedd wedi dod i ben, gallwch ofyn am allwedd ysgogi "
-"newydd."
+"Mae eich allwedd yn dod i ben flwyddyn ar ôl y dyddiad ar y llythyr. Os yw "
+"eich allwedd wedi dod i ben, gallwch <a href=“%link%” class=“govuk-link”>ofyn "
+"am allwedd newydd</a>."
 
 #: src/Actor/templates/actor/lpa-not-found.html.twig:24
 msgid "Date of birth:"
@@ -4422,11 +4428,11 @@ msgstr "Pa sefydliad ydych chi eisiau rhoi mynediad iddo"
 msgid "Which organisation do you want to give access to?"
 msgstr "Pa sefydliad ydych chi eisiau rhoi mynediad iddo?"
 
-#: src/Actor/templates/actor/lpa-create-viewercode.html.twig:46
+#: src/Actor/templates/actor/lpa-create-viewercode.html.twig:45
 msgid "Organisation name"
 msgstr "Enw’r sefydliad"
 
-#: src/Actor/templates/actor/lpa-create-viewercode.html.twig:67
+#: src/Actor/templates/actor/lpa-create-viewercode.html.twig:66
 msgid ""
 "Check that the organisation will accept an online summary of the <abbr "
 "title=\"lasting power of attorney\">LPA</abbr> and how they want to receive "
@@ -5454,7 +5460,7 @@ msgstr ""
 
 #: src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig:229
 msgid "Additional Information"
-msgstr ""
+msgstr "Gwybodaeth ychwanegol"
 
 #: src/Common/templates/partials/lpa-summary-details/lpa-attorney-details.html.twig:1
 msgid "The attorneys"
@@ -6492,6 +6498,22 @@ msgstr ""
 "Gellir defnyddio’r <abbr title=\"atwrneiaeth arhosol\">LPA</abbr> hon cyn "
 "gynted ag y bydd wedi’i chofrestru heblaw bod y cyfarwyddiadau yn dweud fel "
 "arall"
+
+#: src/Actor/templates/actor/lpa-create-viewercode.html.twig:39
+msgid ""
+"The organisation could be a hospital, care home, or other health care "
+"provider. This is for your reference only"
+msgstr ""
+"Gallai’r sefydliad fod yn ysbyty, cartref gofal neu ddarparwr gofal iechyd "
+"arall. I chi gyfeirio ato yn unig mae hyn"
+
+#: src/Actor/templates/actor/lpa-create-viewercode.html.twig:41
+msgid ""
+"The organisation could be a bank, energy provider, or another business. This "
+"is for your reference only"
+msgstr ""
+"Gallai’r sefydliad fod yn fanc, darparwr ynni, neu’n fusnes arall. I chi "
+"gyfeirio ato yn unig mae hyn"
 
 #: src/Actor/templates/actor/change-details.html.twig:36
 msgid "an attorneys date of birth is wrong"
